@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.74 2009-01-11 23:31:46 nicm Exp $ */
+/* $Id: cmd.c,v 1.75 2009-01-12 19:23:14 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -55,6 +55,8 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_refresh_client_entry,
 	&cmd_rename_session_entry,
 	&cmd_rename_window_entry,
+	&cmd_resize_pane_down_entry,
+	&cmd_resize_pane_up_entry,
 	&cmd_respawn_window_entry,
 	&cmd_save_buffer_entry,
 	&cmd_scroll_mode_entry,
