@@ -1,5 +1,6 @@
 12 January 2009
 
+* Two commands, resize-pane-up and resize-pane-down to resize a pane.
 * Make the window pane code handle panes of different sizes, and add a -l
   and -p arguments to split-window to specify the new window size in lines
   or as a percentage.
@@ -882,7 +883,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.195 2009-01-12 18:22:47 nicm Exp $
+$Id: CHANGES,v 1.196 2009-01-12 19:23:14 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB
